Test Russian ".рф" domain support https://bugs.webkit.org/show_bug.cgi?id=148721

Reviewed by Darin Adler.

Source/WebCore:

Test: fast/url/user-visible/rf.html

* html/URLUtils.h: Made this header file work with Objective-C.

* WebCore.xcodeproj/project.pbxproj:
* bindings/scripts/CodeGeneratorJS.pm:
* testing/Internals.cpp:
(WebCore::Internals::getCurrentMediaControlsStatusForElement):
(WebCore::Internals::userVisibleString):
* testing/Internals.h:
* testing/Internals.idl:
* testing/Internals.mm: Added.
(WebCore::Internals::userVisibleString):

LayoutTests:

* TestExpectations:
* fast/url/user-visible: Added.
* fast/url/user-visible/rf-expected.txt: Added.
* fast/url/user-visible/rf.html: Added.
* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/166858@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189285 268f45cc-cd09-0410-ab3c-d52691b4dbfc